integration tests started, fixed some bugs, updated swagger, added .vscode debug setup
